welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: ';' expected but ')' found.
  if (day == 6 || day == 7) || vacation ){
                                        ^